fix: correct Chat height on smaller devices

--- a/client/src/pages/Chat/chat.scss
+++ b/client/src/pages/Chat/chat.scss
@@ -7,7 +7,7 @@
   &.small-screen {
     // Scuffed method
     // middle__button-group height + padding-bottom
-    height: calc(100% - 1rem - 0.5rem);
+    height: calc(100% - 1rem - 1.5rem);
   }
 
   .header {
